# flow-matching-on-graphs

./: .gitignore  000-continuity_equation.ipynb  001-continuity_equation.ipynb  002-flow_matching_simple_graph.ipynb  003-flow_matching_simple_graph.ipynb  004-flow_matching_simple_graph.ipynb  005-pytorch-fixed_conditional_scaling.ipynb  005-pytorch.ipynb  006-better_training_loop.ipynb  007-schedule_scaling_factorization.ipynb  008-gnn.ipynb  009-classification_via_bayes.ipynb  010-classification_via_bayes.ipynb  012-simulation_free_conditional_path.ipynb  README.md  amendment_ex12_v2.md  amendment_ex12c_init_dist.md  amendment_ex13_film.md  amendment_ex13_gnn_baseline.md  amendment_ex5_backward.md  amendment_ex8b_topk_epochs.md  amendment_gnn_model.md  benchmark_dataset.py  benchmark_dead_neurons.py  benchmark_layers.py  benchmark_loss_spike.py  benchmark_mps_ops.py  benchmark_mps_vs_cpu.py  benchmark_remaining.py  benchmark_standard_training.py  benchmark_training.py  experiments_4_5_spec.md  fix_dataset_coupling.md  fix_edge_features.md  fix_ema.md  fix_factorize_configurable.md  fix_factorize_rate.md  fix_film_init.md  fix_loss_normalization.md  fix_rate_kl_loss.md  (+44 more)
config_fm/: __init__.py  config_space.py  loss.py  model.py  sample.py  train.py
experiments/: ex10_topology_generalization.py  ex11_combined_generalization.py  ex11d_dirichlet_variant.py  ex11e_dirichlet_ablation.py  ex12_cube_boundary.py  ex12b_cube5_boundary.py  ex12c_cube_posterior.py  ex13_sparse_sensors.py  ex13b_posterior_sampling.py  ex14_diagnostics.py  ex14a_eeg_setup.py  ex14b_eeg_train.py  (+35 more)
(+70 files in other folders)
